[gd_scene load_steps=6 format=2]

[ext_resource path="res://ui/MenuBackground.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/Title.png" type="Texture" id=3]
[ext_resource path="res://ui/MainMenu.gd" type="Script" id=4]
[ext_resource path="res://sounds/music/root03-hope.wav" type="AudioStream" id=5]
[ext_resource path="res://sounds/music/root01-piano.wav" type="AudioStream" id=7]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleImage" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainButtons" type="VBoxContainer" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 1168.0
margin_top = -319.0
margin_right = 1463.0
margin_bottom = -49.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="Button" parent="MainButtons"]
margin_right = 295.0
margin_bottom = 60.0
text = "Play"

[node name="ControlsButton" type="Button" parent="MainButtons"]
margin_top = 70.0
margin_right = 295.0
margin_bottom = 130.0
text = "Controls"

[node name="CreditsButton" type="Button" parent="MainButtons"]
margin_top = 140.0
margin_right = 295.0
margin_bottom = 200.0
text = "Credits"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="MainButtons"]
margin_top = 210.0
margin_right = 295.0
margin_bottom = 270.0
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="VBoxContainer" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 1080.0
margin_top = 19.5
margin_right = 1461.0
margin_bottom = 316.5
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MoveCounterCheckbox" type="CheckButton" parent="Options"]
margin_right = 381.0
margin_bottom = 60.0
text = "Move counter"

[node name="FxLabel" type="Label" parent="Options"]
margin_top = 70.0
margin_right = 381.0
margin_bottom = 110.0
text = "FX volume"

[node name="FxVolumeSlider" type="HSlider" parent="Options"]
margin_top = 120.0
margin_right = 381.0
margin_bottom = 170.0
min_value = -30.0
max_value = 0.0
value = -6.0

[node name="MusicLabel" type="Label" parent="Options"]
margin_top = 180.0
margin_right = 381.0
margin_bottom = 220.0
text = "Music volume"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicVolumeSlider" type="HSlider" parent="Options"]
margin_top = 230.0
margin_right = 381.0
margin_bottom = 280.0
min_value = -30.0
max_value = 0.0
value = -6.0

[node name="bg" parent="." instance=ExtResource( 1 )]

[node name="Music1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
autoplay = true
bus = "Music"

[node name="Music2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
autoplay = true
bus = "Music"

[connection signal="pressed" from="MainButtons/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="MainButtons/ControlsButton" to="." method="_on_ControlsButton_pressed"]
[connection signal="pressed" from="MainButtons/CreditsButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="pressed" from="MainButtons/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="toggled" from="Options/MoveCounterCheckbox" to="." method="_on_MoveCounterCheckbox_toggled"]
[connection signal="value_changed" from="Options/FxVolumeSlider" to="." method="_on_FxVolumeSlider_value_changed"]
[connection signal="value_changed" from="Options/MusicVolumeSlider" to="." method="_on_MusicVolumeSlider_value_changed"]
